# flood-management

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: app.py  inference.py
api/templates/: index.html
src/: data.py  train.py
